kubernetes/keycloak/manifests/openldap.yaml
apiVersion: v1
kind: Service
metadata:
  name: openldap
  labels:
    app: openldap
spec:
  ports:
    - name: ldap
      port: 389
    - name: ldaps
      port: 636
  selector:
    app: openldap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap
  labels:
    app: openldap
spec:
  selector:
    matchLabels:
      app: openldap
  template:
    metadata:
      labels:
        app: openldap
    spec:
      containers:
        - name: openldap
          image: localhost/openldap:latest
          imagePullPolicy: Never
          ports:
            - name: ldap
              containerPort: 389
            - name: ldaps
              containerPort: 636

          volumeMounts:
            - name: certs
              mountPath: /certs
            - name: ldif
              mountPath: /ldif
            - name: output
              mountPath: /output

      volumes:
        - name: ldif
          configMap:
            name: openldap-ldif
        - name: certs
          secret:
            secretName: openldapcert
        - name: output
          hostPath:
            path: /output
            type: Directory
