kubernetes/keycloak/manifests/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:12.0.2
          ports:
            - name: http
              containerPort: 8080

          volumeMounts:
            - name: scripts
              mountPath: /opt/jboss/startup-scripts/
            - name: certs
              mountPath: /certs

      volumes:
        - name: scripts
          configMap:
            name: keycloak-cli-scripts
        - name: certs
          secret:
            secretName: keycloakcert
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: keycloak
spec:
  virtualhost:
    fqdn: keycloak.127-0-0-191.nip.io
  routes:
    - services:
      - name: keycloak
        port: 80
